--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 { 
-  "ChatOwner": "6281348106274@s.whatsapp.net",
-  "ownerNumber": "6281348106274@s.whatsapp.net",
-  "botName": "DaniBot",
-  "ownerName": "Dani Maker",
+  "ChatOwner": "6285730110727@s.whatsapp.net",
+  "ownerNumber": "6285730110727@s.whatsapp.net",
+  "botName": "DimNoElit",
+  "ownerName": "Shan Elit",
   "sessionName": "session",
   "footer": "© DaniBot 2022",
   "api_lolkey": "SadTeams",
