--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 { 
-  "ChatOwner": "6281348106274@s.whatsapp.net",
-  "ownerNumber": "6281348106274@s.whatsapp.net",
-  "botName": "DaniBot",
-  "ownerName": "Dani Maker",
-  "sessionName": "session",
+  "ChatOwner": "6285730110727@s.whatsapp.net",
+  "ownerNumber": "6285730110727@s.whatsapp.net",
+  "botName": "DimBot",
+  "ownerName": "Shan4Ever",
+  "sessionName": "sesions",
   "footer": "© DaniBot 2022",
   "api_lolkey": "SadTeams",
   "group":{
